--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,22 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+<DOCTYPE! html>
+<html>
+  <head>
+
+  </head>
+
+  <body>
+    <div class="center jumbotron">
+      <h1>Welcome to the Sample app</h1>
+
+      <h2>
+        This is the home page for the
+        <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+        sample application.
+      </h2>
+      <%= link_to "sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+    </div>
+      <%#= link_to image_tag("kitten.jpg", alt:"rails logo") %>
+    <%= link_to image_tag("rails.png", alt:"rails logo"), 'http://rubyonrails.org/' %>
+  </body>
+</html>
